fix(collapse): a11y need the content must invisible when collapsed

--- a/packages/elemental-theme/src/custom-elements/ef-collapse.less
+++ b/packages/elemental-theme/src/custom-elements/ef-collapse.less
@@ -51,6 +51,7 @@
 
   &:not([expanded]) {
     [part="content"] {
+      visibility: hidden;
       height: 0;
       animation-name: collapse;
     }
